get some points for equility and comparison

--- a/README
+++ b/README
@@ -1,7 +1,9 @@
 when you learn datatypes
 
-""""
+```sh
 console.log(typeof 12);  ==> number
 console.log(typeof undefine);  ==> undefine 
 console.log(typeof null);  ==> object  // make sure about this stuff
-"""
+```
+
+In javascript comparison and eqilaity check are two differnt thinngs.
